Make sure the phone number on the error message doesn't wrap.

--- a/css/style.css
+++ b/css/style.css
@@ -1131,6 +1131,10 @@ ul.ui-autocomplete {
   margin-top: 18px;
 }
 
+#failure-message .phone-number {
+  white-space: nowrap;
+}
+
 #tour #tour-exit {
   position: absolute;
   height: 22px;
